menu z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ button:focus {
   padding-bottom: 20px;
   border-bottom: 2px solid #FDF5F5;
   background: #ffffff;
-  z-index: 999;
+  z-index: 1500;
   width: 100%;
 }
 .middle .middle_line {
